--- a/Smashtag/Views/Base.lproj/Main.storyboard
+++ b/Smashtag/Views/Base.lproj/Main.storyboard
@@ -78,6 +78,7 @@
                                     <outlet property="tweetProfileImageView" destination="cnE-1d-1G3" id="vrL-uO-slN"/>
                                     <outlet property="tweetScreenNameLabel" destination="Jj6-GE-mmF" id="WOh-8Z-ANq"/>
                                     <outlet property="tweetTextLabel" destination="gcg-Q8-sZh" id="rQt-Tb-S0H"/>
+                                    <segue destination="bBq-vg-QXg" kind="show" id="V6R-mN-fCL"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -100,6 +101,32 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YdZ-xU-89r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="922" y="284"/>
+        </scene>
+        <!--Mentions Table View Controller-->
+        <scene sceneID="Yci-Hk-a1n">
+            <objects>
+                <tableViewController id="bBq-vg-QXg" customClass="MentionsTableViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="eXY-7X-FOS">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SomeIndetifier" id="nd6-Pt-9Kb">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nd6-Pt-9Kb" id="tpP-JF-bNl">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="bBq-vg-QXg" id="UZF-MN-w8z"/>
+                            <outlet property="delegate" destination="bBq-vg-QXg" id="Ofq-k0-8rw"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D3z-HA-HDk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1650" y="284"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Zz3-IF-9rG">
