--- a/Smashtag/Views/Base.lproj/Main.storyboard
+++ b/Smashtag/Views/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Tweet Table View Controller-->
+        <!--Root Tweet Table View Controller-->
         <scene sceneID="OXZ-Mo-UfU">
             <objects>
-                <tableViewController id="MxJ-wT-guP" customClass="TweetTableViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="MxJ-wT-guP" customClass="RootTweetTableViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="162" sectionHeaderHeight="22" sectionFooterHeight="22" id="YG6-C9-8RK">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -102,10 +102,10 @@
             </objects>
             <point key="canvasLocation" x="214" y="284"/>
         </scene>
-        <!--Mentions Table View Controller-->
+        <!--MentionTVC-->
         <scene sceneID="VBc-uh-wKC">
             <objects>
-                <tableViewController id="Ibh-OL-JpU" customClass="MentionsTableViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="MentionTVC" id="Ibh-OL-JpU" customClass="MentionsTableViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="PkK-6M-CNn">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -125,7 +125,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="MxJ-wT-guP" kind="show" identifier="" id="oTF-bc-fbG"/>
+                                    <segue destination="WmF-Gz-7LM" kind="show" id="L1f-Te-o0G"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageMentionTableViewCell" rowHeight="230" id="cWG-dx-ibj" customClass="ImageTableViewCell" customModule="Smashtag" customModuleProvider="target">
@@ -163,12 +163,20 @@
                             <outlet property="delegate" destination="Ibh-OL-JpU" id="Ik2-w1-IgZ"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="iBS-vb-hXa">
+                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="sTs-Be-ciP">
+                            <connections>
+                                <segue destination="8I7-E2-9kl" kind="unwind" unwindAction="backToRoot:" id="dPo-Id-UjY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hlb-wK-yTf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="8I7-E2-9kl" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="921" y="284"/>
         </scene>
-        <!--Image View Controller-->
+        <!--Title-->
         <scene sceneID="eDe-G3-A0l">
             <objects>
                 <viewController id="gYO-nc-aVh" customClass="ImageViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
@@ -181,7 +189,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="aFh-ie-Vob">
-                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outlet property="delegate" destination="gYO-nc-aVh" id="ecc-9H-EYp"/>
@@ -197,11 +205,19 @@
                             <constraint firstItem="aFh-ie-Vob" firstAttribute="bottom" secondItem="wvt-e1-xgu" secondAttribute="top" id="vof-LQ-Pgp"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="PzW-Qf-Jbi">
+                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="sS6-rb-75g">
+                            <connections>
+                                <segue destination="bUk-no-2NE" kind="unwind" unwindAction="backToRoot:" id="a4p-JI-r8o"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="scrollView" destination="aFh-ie-Vob" id="lhv-zh-XDN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CLD-Ke-MjX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="bUk-no-2NE" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer numberOfTapsRequired="2" id="dyV-3C-5qq">
                     <connections>
                         <action selector="scrollViewDoubleTap:" destination="gYO-nc-aVh" id="yPk-iY-MGP"/>
@@ -324,11 +340,116 @@
             </objects>
             <point key="canvasLocation" x="-608" y="992"/>
         </scene>
+        <!--Tweet Table View Controller-->
+        <scene sceneID="Xh1-pJ-5ND">
+            <objects>
+                <tableViewController id="WmF-Gz-7LM" customClass="TweetTableViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="162" sectionHeaderHeight="22" sectionFooterHeight="22" id="tSr-Or-YLu">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <textField key="tableHeaderView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Twitter Search Query" minimumFontSize="17" id="28e-Ye-epN">
+                            <rect key="frame" x="0.0" y="-30" width="600" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                        </textField>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Tweet" rowHeight="162" id="PTe-uJ-90Q" customClass="TweetTableViewCell" customModule="Smashtag" customModuleProvider="target">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PTe-uJ-90Q" id="sFa-cd-1KD">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweeter" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f8q-ie-pB7">
+                                            <rect key="frame" x="64" y="9" width="528" height="20"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Tweet Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ed-QL-hSy">
+                                            <rect key="frame" x="64" y="37" width="528" height="116"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfilePlaceholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="1nM-Qm-hVr">
+                                            <rect key="frame" x="8" y="8" width="48" height="48"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="48" id="03D-Da-1GU"/>
+                                                <constraint firstAttribute="width" constant="48" id="Hgd-zj-JA4"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="4"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RM4-z7-bPs">
+                                            <rect key="frame" x="8" y="64" width="48" height="15"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="RM4-z7-bPs" firstAttribute="top" secondItem="1nM-Qm-hVr" secondAttribute="bottom" constant="8" symbolic="YES" id="20y-Id-xhu"/>
+                                        <constraint firstItem="1nM-Qm-hVr" firstAttribute="top" secondItem="sFa-cd-1KD" secondAttribute="topMargin" id="2vQ-qh-4tM"/>
+                                        <constraint firstItem="4ed-QL-hSy" firstAttribute="top" secondItem="f8q-ie-pB7" secondAttribute="bottom" constant="8" symbolic="YES" id="3h1-bt-hbj"/>
+                                        <constraint firstItem="1nM-Qm-hVr" firstAttribute="leading" secondItem="RM4-z7-bPs" secondAttribute="leading" id="64I-dc-OM2"/>
+                                        <constraint firstItem="4ed-QL-hSy" firstAttribute="trailing" secondItem="sFa-cd-1KD" secondAttribute="trailingMargin" id="AiJ-c5-vQD"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="4ed-QL-hSy" secondAttribute="bottom" id="MUi-0A-piZ"/>
+                                        <constraint firstItem="1nM-Qm-hVr" firstAttribute="trailing" secondItem="RM4-z7-bPs" secondAttribute="trailing" id="Tgf-RH-Shl"/>
+                                        <constraint firstItem="4ed-QL-hSy" firstAttribute="leading" secondItem="f8q-ie-pB7" secondAttribute="leading" id="cPc-3T-bcH"/>
+                                        <constraint firstItem="f8q-ie-pB7" firstAttribute="top" secondItem="sFa-cd-1KD" secondAttribute="topMargin" constant="1" id="dP5-qL-fvK"/>
+                                        <constraint firstItem="f8q-ie-pB7" firstAttribute="trailing" secondItem="sFa-cd-1KD" secondAttribute="trailingMargin" id="dlf-Vt-2cN"/>
+                                        <constraint firstItem="f8q-ie-pB7" firstAttribute="leading" secondItem="1nM-Qm-hVr" secondAttribute="trailing" constant="8" symbolic="YES" id="kto-me-Jj4"/>
+                                        <constraint firstItem="1nM-Qm-hVr" firstAttribute="leading" secondItem="sFa-cd-1KD" secondAttribute="leadingMargin" id="nao-Z1-0nK"/>
+                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="RM4-z7-bPs" secondAttribute="bottom" id="rTW-A9-Yl5"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="tweetCreatedLabel" destination="RM4-z7-bPs" id="YMY-Pg-lxe"/>
+                                    <outlet property="tweetProfileImageView" destination="1nM-Qm-hVr" id="M1s-ZY-URU"/>
+                                    <outlet property="tweetScreenNameLabel" destination="f8q-ie-pB7" id="zkr-ib-H2T"/>
+                                    <outlet property="tweetTextLabel" destination="4ed-QL-hSy" id="hbY-f3-DQv"/>
+                                    <segue destination="Ibh-OL-JpU" kind="show" id="Rbw-l3-oj4"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="WmF-Gz-7LM" id="rsi-fC-Q4I"/>
+                            <outlet property="delegate" destination="WmF-Gz-7LM" id="YI4-EB-XWi"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="FO3-Nz-h29">
+                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="gn4-GK-O3L">
+                            <connections>
+                                <segue destination="Tag-Ln-zZd" kind="unwind" unwindAction="backToRoot:" id="fBv-qo-jHU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Mqt-Cx-0Xs">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="WmF-Gz-7LM" eventType="valueChanged" id="cR9-4x-dwo"/>
+                        </connections>
+                    </refreshControl>
+                    <connections>
+                        <outlet property="searchTextField" destination="28e-Ye-epN" id="xmE-4K-lil"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DCu-yX-Ld4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Tag-Ln-zZd" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1618" y="284"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ProfilePlaceholderImg" width="128" height="128"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="WhF-MR-hWy"/>
+        <segue reference="Rbw-l3-oj4"/>
     </inferredMetricsTieBreakers>
 </document>
