--- a/Smashtag/Views/Base.lproj/Main.storyboard
+++ b/Smashtag/Views/Base.lproj/Main.storyboard
@@ -100,7 +100,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YdZ-xU-89r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="214" y="284"/>
+            <point key="canvasLocation" x="214" y="252"/>
         </scene>
         <!--MentionTVC-->
         <scene sceneID="VBc-uh-wKC">
@@ -125,7 +125,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="WmF-Gz-7LM" kind="show" id="L1f-Te-o0G"/>
+                                    <segue destination="mdS-aV-TRK" kind="show" identifier="OpenURLInsideAppSegue" id="TYY-Vf-roU"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageMentionTableViewCell" rowHeight="230" id="cWG-dx-ibj" customClass="ImageTableViewCell" customModule="Smashtag" customModuleProvider="target">
@@ -174,12 +174,12 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hlb-wK-yTf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="8I7-E2-9kl" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="921" y="284"/>
+            <point key="canvasLocation" x="921" y="252"/>
         </scene>
-        <!--Title-->
+        <!--ImageVC-->
         <scene sceneID="eDe-G3-A0l">
             <objects>
-                <viewController id="gYO-nc-aVh" customClass="ImageViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="gYO-nc-aVh" userLabel="ImageVC" customClass="ImageViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="fLC-uV-3CD"/>
                         <viewControllerLayoutGuide type="bottom" id="wvt-e1-xgu"/>
@@ -189,7 +189,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="aFh-ie-Vob">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outlet property="delegate" destination="gYO-nc-aVh" id="ecc-9H-EYp"/>
@@ -224,7 +224,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="921" y="1014"/>
+            <point key="canvasLocation" x="921" y="1034"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Zz3-IF-9rG">
@@ -300,7 +300,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wI9-kn-G1e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="204" y="992"/>
+            <point key="canvasLocation" x="214" y="1034"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dd2-IN-bWU">
@@ -319,7 +319,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K4H-Et-eht" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-608" y="284"/>
+            <point key="canvasLocation" x="-608" y="252"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FuK-T9-v1t">
@@ -338,7 +338,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C8h-NN-HDu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-608" y="992"/>
+            <point key="canvasLocation" x="-598" y="1034"/>
         </scene>
         <!--Tweet Table View Controller-->
         <scene sceneID="Xh1-pJ-5ND">
@@ -442,7 +442,64 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DCu-yX-Ld4" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Tag-Ln-zZd" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1618" y="284"/>
+            <point key="canvasLocation" x="1618" y="252"/>
+        </scene>
+        <!--WebVC-->
+        <scene sceneID="7Kf-qS-AEr">
+            <objects>
+                <viewController id="mdS-aV-TRK" userLabel="WebVC" customClass="WebViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zRZ-vx-f5l"/>
+                        <viewControllerLayoutGuide type="bottom" id="kL6-cy-SJL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8FB-o9-8N2">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XgM-qN-klY">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="mdS-aV-TRK" id="HR1-Ww-iib"/>
+                                </connections>
+                            </webView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error in loading page" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BWz-kp-k2E">
+                                <rect key="frame" x="220" y="72" width="160" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="pm8-hS-BaY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BWz-kp-k2E" firstAttribute="centerX" secondItem="XgM-qN-klY" secondAttribute="centerX" id="QWa-GY-Si3"/>
+                            <constraint firstItem="XgM-qN-klY" firstAttribute="top" secondItem="8FB-o9-8N2" secondAttribute="top" id="agK-Hf-lnE"/>
+                            <constraint firstAttribute="trailing" secondItem="XgM-qN-klY" secondAttribute="trailing" id="c8o-VG-7uv"/>
+                            <constraint firstItem="XgM-qN-klY" firstAttribute="leading" secondItem="8FB-o9-8N2" secondAttribute="leading" id="g2V-Km-pcS"/>
+                            <constraint firstItem="XgM-qN-klY" firstAttribute="bottom" secondItem="kL6-cy-SJL" secondAttribute="top" id="gNE-7S-NyL"/>
+                            <constraint firstItem="BWz-kp-k2E" firstAttribute="top" secondItem="zRZ-vx-f5l" secondAttribute="bottom" constant="8" id="rf4-Gm-qhs"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="FVC-OY-WzT">
+                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="O0N-SG-hx2">
+                            <connections>
+                                <segue destination="xYy-9F-3fl" kind="unwind" unwindAction="backToRoot:" id="dVR-Mw-wL5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="backToRootItem" destination="O0N-SG-hx2" id="MAj-zJ-mrW"/>
+                        <outlet property="errorLabel" destination="BWz-kp-k2E" id="hgm-yP-yjg"/>
+                        <outlet property="webView" destination="XgM-qN-klY" id="amZ-63-wIi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eoK-18-n0k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="xYy-9F-3fl" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1618" y="1034"/>
         </scene>
     </scenes>
     <resources>
@@ -450,6 +507,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="WhF-MR-hWy"/>
-        <segue reference="Rbw-l3-oj4"/>
+        <segue reference="23p-vl-4my"/>
     </inferredMetricsTieBreakers>
 </document>
